testsuite/tests/th/T15321.hs
{-# LANGUAGE TemplateHaskell #-}

module T15321 where

foo :: String
foo = test

bar :: String
bar = $(_ "baz")
